# boilerplate-python-fastapi

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
api/: main.py
