[tool.poetry]
name = "boilerplate-python-fastapi"
version = "0.1.0"
description = "Boilerplate Python FastAPI"
authors = ["Igor Nóbrega <igordouradonobrega@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.1"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
